# Repo-Contextor

./: .gitignore   .repo-contextor.toml  README.md  pyproject.toml
src/: cli.py  config_loader.py
src/rcpack/: __init__.py  __main__.py  cli.py  config_loader.py  discover.py  gitinfo.py  io_utils.py  packager.py  treeview.py
src/rcpack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rcpack/renderer/: jsonyaml.py  markdown.py
